--- a/SpringCore/src/mymessages.properties
+++ b/SpringCore/src/mymessages.properties
@@ -1,3 +1,3 @@
 greeting=Hello Satish,
 drawing=Drawing Circle.....
-#coordinates=Co-ordinates are( {0}  , {1} )
+coordinates=Co-ordinates are( {0}  , {1} )
